<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>
  <groupId>org.gridman</groupId>
  <artifactId>gridman</artifactId>
  <version>1.1.0</version>
  <name>GridMan</name>
  <description>GridMan Project</description>
  <url>http://code.google.com/p/gridman/</url>

  <properties>
    <coherence.version>[3.7,3.8)</coherence.version>
    <apacheds.version>1.5.5</apacheds.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <organization>
     <name>GridMan</name>
     <url>http://code.google.com/p/gridman/</url>
  </organization>

  <modules>
    <module>gridman-testtools</module>
    <module>gridman-common</module>
    <module>gridman-coherence</module>
    <!--<module>sandbox</module>-->
  </modules>

  <scm>
    <connection>scm:svn:http://gridman.googlecode.com/svn/trunk</connection>
    <developerConnection>scm:svn:https://gridman.googlecode.com/svn/trunk</developerConnection>
    <url>http://gridman.googlecode.com/svn/</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>builds</id>
      <name>In-house build repository</name>
      <url>${internal.maven.repo}/builds</url>
    </repository>
    <site>
      <id>sites</id>
      <name>In-house sites repository</name>
      <url>${internal.site.repo}</url>
    </site>
  </distributionManagement>

  <developers>
    <developer>
      <name>Andrew Wilson</name>
    </developer>
    <developer>
      <name>Jonathan Knight</name>
      <email>jk@thegridman.com</email>
    </developer>
  </developers>

  <build>
    <finalName>gridman-${project.version}</finalName>

    <extensions>
      <extension>
	<groupId>org.apache.maven.wagon</groupId>
	<artifactId>wagon-webdav-jackrabbit</artifactId>
	<version>1.0-beta-7</version>
      </extension>
    </extensions>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
      </plugin>
    </plugins>
    
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-scm-plugin</artifactId>
          <version>1.4</version>
          <configuration>
            <goals>install</goals>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.1.2</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <skip>false</skip>
            <argLine>-Xms128m -Xmx1024m -XX:MaxPermSize=256m</argLine>
            <disableXmlReport>false</disableXmlReport>
            <forkMode>always</forkMode>
            <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
            <excludes>
              <exclude>**/kerberos/*.java</exclude>
              <exclude>**/ClusterNodeFailureSimulationTest.java</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <locales>en</locales>
            <reportPlugins>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                  <aggregate>true</aggregate>
                </configuration>
              </plugin>
              <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                  <aggregate>true</aggregate>
                </configuration>
              </plugin>
              <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                  <aggregate>true</aggregate>
                </configuration>
              </plugin>
              <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration> <configLocation>checkstyle.xml</configLocation> </configuration>
                </plugin> -->
              
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                  <aggregate>true</aggregate>
                </configuration>
              </plugin>
              
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                  <aggregate>true</aggregate>
                </configuration>
              </plugin>
              
            </reportPlugins>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.7</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>Codehaus Snapshots</id>
      <url>http://snapshots.repository.codehaus.org/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
        <!-- Workaround for MNG-2974, see note below -->
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>com.oracle</groupId>
        <artifactId>coherence</artifactId>
        <version>${coherence.version}</version>
      </dependency>
      <dependency>
        <groupId>com.oracle</groupId>
        <artifactId>coherence-jpa</artifactId>
        <version>${coherence.version}</version>
      </dependency>
      <dependency>
        <groupId>com.oracle</groupId>
        <artifactId>coherence-common</artifactId>
        <version>1.7.3.20019</version>
      </dependency>
      <dependency>
        <groupId>com.oracle</groupId>
        <artifactId>coherence-commandpattern</artifactId>
        <version>2.7.3.20019</version>
      </dependency>

      <dependency>
        <groupId>com.sleepycat</groupId>
        <artifactId>je</artifactId>
        <version>3.3.98</version>
      </dependency>
      <dependency>
        <groupId>javax.persistence</groupId>
        <artifactId>persistence-api</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>asm</groupId>
        <artifactId>asm-all</artifactId>
        <version>3.3</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>1.2.15</version>
        <exclusions>
          <exclusion>
            <groupId>javax.jms</groupId>
            <artifactId>jms</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.sun.jdmk</groupId>
            <artifactId>jmxtools</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.sun.jmx</groupId>
            <artifactId>jmxri</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Testing and Mocking -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.7</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>1.8.2</version>
      </dependency>
      <dependency>
      <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest-all</artifactId>
        <version>1.2</version>
      </dependency>

      <!-- Embedded ApacheDS Testing dependencies -->
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-bootstrap-extract</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-bootstrap-partition</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-core</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-core-avl</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-core-integ</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-core-shared</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-jdbm</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-jdbm-store</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-protocol-kerberos</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-kerberos-shared</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-protocol-ldap</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-protocol-shared</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-schema-bootstrap</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-schema-registries</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-server-integ</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-utils</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-xdbm-base</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.server</groupId>
        <artifactId>apacheds-xdbm-search</artifactId>
        <version>${apacheds.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-collections</groupId>
        <artifactId>commons-collections</artifactId>
        <version>3.2.1</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>1.4</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.4</version>
      </dependency>
      <dependency>
        <groupId>org.apache.mina</groupId>
        <artifactId>mina-core</artifactId>
        <version>2.0.0-M6</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.shared</groupId>
        <artifactId>shared-asn1</artifactId>
        <version>0.9.15</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.shared</groupId>
        <artifactId>shared-asn1-codec</artifactId>
        <version>0.9.15</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.shared</groupId>
        <artifactId>shared-ldap</artifactId>
        <version>0.9.15</version>
      </dependency>
      <dependency>
        <groupId>org.apache.directory.shared</groupId>
        <artifactId>shared-ldap-constants</artifactId>
        <version>0.9.15</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.5.6</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.5.6</version>
      </dependency>

    </dependencies>

  </dependencyManagement>

  <profiles>
    <profile>
       <id>dev</id>
       <properties>
         <maven.current.profile>dev</maven.current.profile>
         <siteDeployProtocol>file</siteDeployProtocol>
         <siteDeployPath>~/Sites/gridman</siteDeployPath>
         <siteBaseUrl>http://localhost:8080/site</siteBaseUrl>
       </properties>
    </profile>

    <profile>
       <id>itest</id>
       <properties>
         <maven.current.profile>itest</maven.current.profile>
         <siteDeployProtocol>file</siteDeployProtocol>
         <siteDeployPath>~/Sites/gridman</siteDeployPath>
         <siteBaseUrl>http://localhost:8080/site</siteBaseUrl>
       </properties>
    </profile>
  </profiles>

</project>
